# aiida-renormalizer

./: .gitignore  README.md  pyproject.toml
examples/: README.md  scripted_calcjob_example.py
examples/calcjob/: README.md
examples/calcjob/mps/dynamics/: run_one_shot.py
examples/cli_inputs/: basis.toml  model.toml
examples/mps/dynamics/: run_one_shot.py
examples/mps/fmo/: run_one_shot.py
examples/mps/h2o_qc/: run_one_shot.py
examples/mps/hubbard/: run_one_shot.py
examples/mps/sbm/: README.md  run_one_shot.py
examples/mps/ssh/: run_one_shot.py
examples/mps/transport_kubo/: run_one_shot.py
examples/ttn/junction_ft/: run_one_shot.py
examples/ttn/junction_zt/: run_one_shot.py
examples/ttn/sbm_ft/: run_one_shot.py
examples/ttn/sbm_ttns_tdvp_ps/: README.md  launch_symbolic_calcjob.py  prepare_symbolic_inputs.py  run_one_shot.py  run_via_verdi.sh
examples/ttn/sbm_zt/: run_one_shot.py
examples/workchain/: README.md
src/aiida_renormalizer/: __init__.py  example_support.py
src/aiida_renormalizer/calcfunction/: calcfunction_mps_dynamics.py  calcfunction_mps_fmo.py  calcfunction_mps_h2o_qc.py  calcfunction_mps_hubbard.py  calcfunction_mps_sbm.py  calcfunction_mps_ssh.py  calcfunction_mps_transport_kubo.py  calcfunction_ttn_junction_ft.py  calcfunction_ttn_junction_zt.py  calcfunction_ttn_sbm_ft.py  calcfunction_ttn_sbm_zt.py
src/aiida_renormalizer/calculations/: __init__.py  base.py  manifest_ops.py  scripted.py  utility.py
src/aiida_renormalizer/cli/: __init__.py  cmd_bundle.py  cmd_convergence.py  cmd_evolve.py  cmd_ground_state.py  cmd_reno.py  cmd_spectrum.py  cmd_status.py  code_resolver.py
src/aiida_renormalizer/data/: __init__.py  artifacts.py  basis.py  basis_registry.py  basis_spec.py  basis_tree.py  config.py  model.py  mpo.py  mps.py  op.py  op_spec.py  tensor_network_layout.py  topology.py  ttno.py  ttns.py  utils.py
src/aiida_renormalizer/parsers/: __init__.py  reno_base.py  scripted.py
src/aiida_renormalizer/templates/: base_driver.py.jinja  bath_discretization_driver.py.jinja  bath_spectral_density_driver.py.jinja  bath_spin_boson_model_driver.py.jinja  bath_to_mpo_coeff_driver.py.jinja  build_mpo_driver.py.jinja  bundle_runner_driver.py.jinja  charge_diffusion_driver.py.jinja  compress_driver.py.jinja  correction_vector_driver.py.jinja  dmrg_driver.py.jinja  example_mps_dynamics_single_file.py.jinja  example_mps_fmo_single_file.py.jinja  example_mps_h2o_qc_single_file.py.jinja  example_mps_hubbard_from_spec_single_file.py.jinja  example_mps_hubbard_single_file.py.jinja  example_mps_sbm_single_file.py.jinja  example_mps_ssh_from_opdata_single_file.py.jinja  example_mps_ssh_single_file.py.jinja  example_mps_transport_kubo_single_file.py.jinja  example_ttn_junction_ft_from_spec_topology_single_file.py.jinja  example_ttn_junction_ft_single_file.py.jinja  example_ttn_junction_zt_from_spec_topology_single_file.py.jinja  example_ttn_junction_zt_single_file.py.jinja  example_ttn_sbm_ft_from_spec_single_file.py.jinja  example_ttn_sbm_ft_single_file.py.jinja  example_ttn_sbm_zt_build_calculation.py.jinja  example_ttn_sbm_zt_build_ttn_model.py.jinja  example_ttn_sbm_zt_case_single_file.py.jinja  expectation_driver.py.jinja  imag_time_driver.py.jinja  kubo_driver.py.jinja  max_entangled_mpdm_driver.py.jinja  model_from_symbolic_spec_driver.py.jinja  mps_sbm_compile_generated_script_stage.py.jinja  mps_sbm_write_generated_script_stage.py.jinja  occupations_driver.py.jinja  ohmic_renorm_modes_driver.py.jinja  property_driver.py.jinja  sbm_symbolic_spec_from_modes_driver.py.jinja  (+15 more)
src/aiida_renormalizer/utils/: __init__.py  property_dispatch.py
src/aiida_renormalizer/workchains/: __init__.py  absorption.py  bath_mpo_pipeline.py  bath_spin_boson_model.py  bundle_runner.py  charge_diffusion.py  convergence.py  correction_vector.py  custom.py  ground_state.py  model_to_mpo.py  mpo_to_initial_mps.py  mps_dynamics.py  ohmic_renorm_modes.py  restart.py  sbm_model_from_modes.py  sbm_spectral_modes.py  spin_boson.py  sweep.py  thermal.py  time_evolution.py  transport.py  ttn_ground_state.py  ttn_mps_comparison.py  ttn_symbolic_dynamics.py  ttn_symbolic_model.py  ttn_time_evolution.py  vibronic.py
tests/: conftest.py  test_scripted_integration.py
tests/calcfunctions/: test_bundle_manifest.py
tests/calculations/: test_base.py  test_scripted_calcjob.py
tests/calculations/test_basic/: test_build_mpo.py  test_expectation.py  test_max_entangled_mpdm.py  test_model_from_symbolic.py
tests/calculations/test_bath/: __init__.py  test_bath_discretization.py  test_bath_spectral_density.py  test_bath_to_mpo_coeff.py  test_integration.py  test_sbm_symbolic_spec_from_modes.py
tests/calculations/test_composite/: __init__.py  test_dmrg.py  test_imag_time.py  test_integration.py  test_property.py  test_tdvp.py  test_thermal_prop.py
tests/calculations/test_spectra/: __init__.py  test_charge_diffusion.py  test_correction_vector.py  test_integration.py  test_kubo.py  test_spectra_finite_t.py  test_spectra_zero_t.py  test_spectral_function.py
tests/calculations/test_ttn/: __init__.py  test_ttn_calcjobs.py
tests/cli/: __init__.py  test_cli_commands.py
tests/data/: test_artifacts.py  test_basis.py  test_basis_registry.py  test_config.py  test_integration.py  test_model.py  test_mpo.py  test_mps.py  test_op.py  test_specs.py  test_tensor_network_layout.py  test_topology.py  test_ttn.py
tests/examples/: test_example_support.py
tests/parsers/: test_reno_base_parser.py  test_scripted_parser.py
tests/workchains/: __init__.py  conftest.py  test_absorption.py  test_bath_mpo_pipeline.py  test_bath_spin_boson_model.py  test_bundle_runner.py  test_charge_diffusion.py  test_convergence.py  test_correction_vector.py  test_custom.py  test_ground_state.py  test_integration.py  test_model_to_mpo.py  test_restart.py  test_sbm_model_from_modes.py  test_spin_boson.py  test_sweep.py  test_thermal.py  test_time_evolution.py  test_transport.py  test_ttn_ground_state.py  test_ttn_mps_comparison.py  test_ttn_symbolic_model.py  test_ttn_time_evolution.py  test_vibronic.py
(+57 files in other folders)
