# aiida-renormalizer/pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiida-renormalizer"
version = "0.1.0"
description = "AiiDA plugin for the Renormalizer tensor network package"
requires-python = ">=3.9"
dependencies = [
    "aiida-core==2.7.3",
    "renormalizer",
    "numpy<2.0",
    "jinja2>=3",  # Required for CalcJob driver template rendering
    "print-tree2",  # Required for TTN functionality
    "tomli>=2,<3",  # TOML parser (consistent dependency across Python versions)
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff>=0.6",
]

[project.entry-points."aiida.data"]
"reno.model"  = "aiida_renormalizer.data.model:ModelData"
"reno.mps"    = "aiida_renormalizer.data.mps:MPSData"
"reno.mpo"    = "aiida_renormalizer.data.mpo:MPOData"
"reno.op"     = "aiida_renormalizer.data.op:OpData"
"reno.op_spec" = "aiida_renormalizer.data.op_spec:OpSpecData"
"reno.basis"  = "aiida_renormalizer.data.basis:BasisSetData"
"reno.basis_spec" = "aiida_renormalizer.data.basis_spec:BasisSpecData"
"reno.config" = "aiida_renormalizer.data.config:ConfigData"
"reno.basis_tree" = "aiida_renormalizer.data.basis_tree:BasisTreeData"
"reno.tn_layout" = "aiida_renormalizer.data.tensor_network_layout:TensorNetworkLayoutData"
"reno.ttns"   = "aiida_renormalizer.data.ttns:TTNSData"
"reno.ttno"   = "aiida_renormalizer.data.ttno:TTNOData"
"reno.topology" = "aiida_renormalizer.data.topology:TopologyData"

[project.entry-points."aiida.calculations"]
# Single runtime CalcJob (code-generate workfunction pipeline execution)
"reno.bundle_runner" = "aiida_renormalizer.calculations.basic.bundle_runner:BundleRunnerCalcJob"

[project.entry-points."aiida.parsers"]
"reno.base" = "aiida_renormalizer.parsers.reno_base:RenoBaseParser"
"reno.scripted" = "aiida_renormalizer.parsers.scripted:ScriptedParser"

## Temporarily disable verdi CLI entrypoint during Python LEGO API refactor.
## Re-enable after workflow/block interfaces are stabilized.
#[project.entry-points."aiida.command"]
#"reno" = "aiida_renormalizer.cli.cmd_reno:reno"

[project.entry-points."aiida.workflows"]
# Active process entrypoint (workfunction + BundleRunnerCalcJob orchestration)
"reno.bundle_runner" = "aiida_renormalizer.workchains.bundle_runner:BundleRunnerWorkChain"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
